--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://.fontawesome.com/10b510c983.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
   />
     <title>Arnold pix</title>
@@ -17,16 +17,16 @@
    <div class="navbar">
     <div class="max-width">
         <div class="logo">
-            <a href="/index.html">
+            <a href="index.html">
                 <i class="fa-solid fa-camera"></i>
                 <span>Arnold pix</span></a>
                  </div>
              <ul class="menu">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/gallery.html">Gallery</a></li>
-                <li><a href="/live.html">Live streaming</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/contact.html">Contact</a></li>    
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="live.html">Live streaming</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>    
              </ul>
              <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -96,7 +96,7 @@
   </footer>
   
   
-  <script src="/main.js"></script>
+  <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script>
     const swiper = new Swiper('.swiper', {
