--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://.fontawesome.com/10b510c983.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
   />
     <title>Arnold pix</title>
@@ -17,16 +17,16 @@
    <div class="navbar">
     <div class="max-width">
         <div class="logo">
-            <a href="/index.html">
+            <a href="index.html">
                 <i class="fa-solid fa-camera"></i>
                 <span>Arnold pix</span></a>
                  </div>
              <ul class="menu">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/gallery.html">Gallery</a></li>
-                <li><a href="/live.html">Live streaming</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/contact.html">Contact</a></li>    
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="live.html">Live streaming</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>    
              </ul>
              <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -51,11 +51,13 @@
     <div class="max-width">
       <div class="card">
         <div class="left">
-             <img src="/banner.jpg" alt="">
+             <img src="banner.jpg" alt="">
      </div>
      <div class="right">
         <h3>Services</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, commodi aspernatur eum accusantium itaque tempora dolor saepe enim libero, laboriosam, nulla laborum aperiam! Eligendi, incidunt sed distinctio nemo laborum repellendus repudiandae illum, vero nostrum veritatis ut reiciendis quae eaque sapiente labore quisquam, deleniti minus nihil excepturi vel magnam quia? Dicta nobis, obcaecati nostrum, aperiam minima, est aut nesciunt consequatur voluptatem numquam quia consequuntur perferendis neque explicabo quaerat dignissimos. Fuga, magnam?</p>
+        <p>Arnold Pix Photography is a web based application
+          that allows the photographer to handle all activities online. Clients who want to interact with the photographer can use this website to reach the person in charge which therefore makes this system very flexible and convenient. The photographer might be very busy and probably does not have time have to sit and manage the entire activities. This application gives him the power and flexibility to manage the entire system from a single online system.
+          </p>
         <a href="#">Book our services now&#8594;</a>
       </div>
   
@@ -72,10 +74,10 @@
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
       <!-- Slides -->
-      <div class="swiper-slide"><img src="/graduation 1.jpg" alt=""></div>  
-      <div class="swiper-slide"><img src="/nature 1.jpg" alt=""></div>
-      <div class="swiper-slide"><img src="/graduation 2.jpg" alt=""></div>
-      <div class="swiper-slide"><img src="/nature 3.jpg" alt=""></div>
+      <div class="swiper-slide"><img src="portrait 3.jpg" alt=""></div>  
+      <div class="swiper-slide"><img src="portrait 2.jpg" alt=""></div>
+      <div class="swiper-slide"><img src="wedding 2.jpg" alt=""></div>
+      <div class="swiper-slide"><img src="event 4.jpg" alt=""></div>
       
 
     </div>
