--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://.fontawesome.com/10b510c983.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
   />
     <title>Arnold pix</title>
@@ -17,16 +17,16 @@
    <div class="navbar">
     <div class="max-width">
         <div class="logo">
-            <a href="/index.html">
+            <a href="index.html">
                 <i class="fa-solid fa-camera"></i>
                 <span>Arnold pix</span></a>
                  </div>
              <ul class="menu">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/gallery.html">Gallery</a></li>
-                <li><a href="/live.html">Live streaming</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/contact.html">Contact</a></li>    
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="live.html">Live streaming</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>    
              </ul>
              <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -48,72 +48,62 @@
     <h2 class="title">Wedding photos</h2>
     <div class="max-width">
       <div class="card">
-        <img src="/wedding 1.jpg" alt="">
-        <img src="/wedding 2.jpg" alt="">
-        <img src="/wedding 3.jpg" alt="">
+        <img src="wedding 8.jpg" alt="">
+        <img src="wedding 2.jpg" alt="">
+        <img src="wedding 3.jpg" alt="">
       </div>
     </div>
     <div class="max-width">
       <div class="card">
-        <img src="/wedding 4.jpg" alt="">
-        <img src="/wedding 5.jpg" alt="">
-        <img src="/wedding 6.jpg" alt="">
+        <img src="wedding 4.jpg" alt="">
+        <img src="wedding 5.jpg" alt="">
+        <img src="wedding 6.jpg" alt="">
       </div>
     </div>
   </section>
   
-  <!--Nature section-->
+  <!--Food section-->
   
-  <section class="nature">
-    <h2 class="title">Perfect nature photos</h2>
+  <section class="food">
+    <h2 class="title">Perfect food photos</h2>
     <div class="max-width">
       <div class="card">
-        <img src="/nature 8.jpg" alt="">
-        <img src="/nature 10.jpg" alt="">
-        <img src="/nature 12.jpg" alt="">
+        <img src="food 1.jpg" alt="">
+        <img src="food 2.jpg" alt="">
+        <img src="food 3.jpg" alt="">
       </div>
     </div>
     <div class="max-width">
       <div class="card">
-        <img src="/nature 7.jpg" alt="">
-        <img src="/nature 11.jpg" alt="">
-        <img src="/nature 9.jpg" alt="">
+        <img src="food 4.jpg" alt="">
+        <img src="food 5.jpg" alt="">
+        <img src="food 6.jpg" alt="">
       </div>
     </div>
   </section>
 
 
-<!-- Portrait -->
+<!-- Portrait shoots -->
   
-<section class="Portraits">
+<section class="portrait">
     <h2 class="title">Portrait shoots</h2>
     <div class="portrait-6">
       <div class="card">
-        <img src="/nature 1.jpg" alt="">
-        <img src="/nature 5.jpg" alt="">
-        <img src="/nature 6.jpg" alt="">
+        <img src="portrait 1.jpg" alt="">
+        <img src="portrait 2.jpg" alt="">
+        <img src="portrait 5.jpg" alt="">
 
       </div>
     </div>
     <div class="portrait-6">
       <div class="card">
-        <img src="/nature 3.jpg" alt="">
-        <img src="/nature 7.jpg" alt="">
-        <img src="/nature 2.jpg" alt="">
-
-      </div>
-    </div>
-    <div class="portrait-6">
-      <div class="card">
-        <img src="/nature 4.jpg" alt="">
-        <img src="/nature 5.jpg" alt="">
-        <img src="/portrait 6.jpg" alt="">
+        <img src="portrait 4.jpg" alt="">
+        <img src="portrait 3.JPG" alt="">
+        <img src="otro 2.jpg" alt="">
 
       </div>
     </div>
   </section>
-
-
 
 
 
@@ -123,7 +113,7 @@
   </footer>
   
   
-  <script src="/main.js"></script>
+  <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script>
     const swiper = new Swiper('.swiper', {
